--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   mobile_scanner: ^7.0.1
+  qr_code_scanner: 
   json_annotation: ^4.9.0
   provider: ^6.1.1
   # The following adds the Cupertino Icons font to your application.
