--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,12 +50,22 @@ dependencies:
   table_sticky_headers: ^2.0.5
   horizontal_data_table: ^4.3.1
   permission_handler: ^12.0.1
+  excel: ^2.0.0
+  syncfusion_flutter_xlsio: ^29.2.11
+  open_file: ^3.5.10
+  flutter_local_notifications: 18.0.1
+  url_launcher: ^6.1.10
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.10.0
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/appstore.png" # ganti dengan path logomu
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
